ayub bhai chnages

--- a/public/frontend/dealers/assets/css/style.css
+++ b/public/frontend/dealers/assets/css/style.css
@@ -1177,7 +1177,7 @@ div#next, div#next-ext {
 
 .upload-img-btn {
     position: relative;
-    /* visibility: hidden; */
+    visibility: hidden;
 }
 
 .upload-img-btn:before {
