--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -2393,5 +2393,66 @@ header.thnkPage .dropdown-toggle {
     color: #000;
 }
 
+/* End */
+
+
+/* Accepted Vehicle Dealer Page*/
+.vp-box {
+    box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 8%);
+    border-radius: 10px;
+    border: 1px solid rgb(0 0 0 / 6%);
+    overflow: hidden;
+}
+.vp-spec-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
+}
+.vp-box .vp-img {
+    height: 100%;
+}
+.vp-box .vp-img img {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.vp-box .vp-content {
+    padding: 30px;
+}
+
+.vp-box .vp-content h3 {
+    font-size: 20px;
+}
+
+.vp-box .vp-content h4 {
+    font-size: 16px;
+}
+.vp-box .vp-btns {
+    margin-top: 20px;
+    text-align: right;
+}
+.vp-box .vp-btns a {
+    font-size: 13px;
+    text-decoration: none;
+    color: #fff;
+    background: #4c5068;
+    padding: 8px 20px;
+    border-radius: 100px;
+    transition: all .4s ease-in;
+}
+
+.vp-btns a:first-child {
+    margin-right: 10px;
+}
+.vp-box .vp-btns .accepted {
+    background: #05eab5;
+}
+
+.vp-box .vp-btns a:not(.accepted):hover {
+    background: #05eab5;
+}
+
 
 /* End */
