--- a/public/frontend/dealers/assets/css/style.css
+++ b/public/frontend/dealers/assets/css/style.css
@@ -349,10 +349,10 @@ header.header {
     border-radius: 5px;
     color: #39c22b;
 }
-.custom-checkbox .checkbox-square i{
+.custom-checkbox .checkbox-square svg{
     display: none;
 }
-.custom-checkbox input[type="checkbox"]:checked + label i{
+.custom-checkbox input[type="checkbox"]:checked + label svg{
     display: block;
 }
 .confirmation-div{
