--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -2516,3 +2516,61 @@ ol.tagLines li::marker {
 }
 
 /* End */
+.fct-cont p {
+    margin-bottom: 0;
+    color: #fff;
+}
+
+.fct-cont {
+    margin-top: 30px;
+}
+.value-car{
+    display:block !important;
+    margin-bottom: 10px !important;
+}
+.bst-price-sec h6 {
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+    margin-top: 20px;
+}
+
+.bst-price-sec .fct-text {
+    display: flex;
+    gap: 10px 40px;
+    flex-wrap: wrap;
+}
+
+.bst-price-sec .fct-text .fct-cont {
+    max-width: calc(50% - 40px);
+}
+
+.finance-sec {
+    padding-bottom: 100px;
+}
+
+.fin-content h3 {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.fin-content p {
+    font-size: 14px;
+    margin: 0;
+}
+
+.fin-content {
+    padding: 50px;
+    box-shadow: 0 0 6px #0000001f;
+    border-radius: 10px;
+}
+.sell-car-sec {
+    padding-bottom: 80px;
+}
+
+.sell-car-sec h2 {
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
