--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -1,4 +1,4 @@
-/* FONTS */
+
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
@@ -7,7 +7,9 @@
 * {
     font-family: 'poppins', 'sans-serif';
 }
+/* .new{
 
+} */
 body {
     scroll-behavior: smooth;
 }
